Update with temp fix for word wrap

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ body {
 main {
     margin: auto;
     padding: 25px;
-    flex: 1 0 auto;
     max-width: 1000px; 
 }
 
@@ -101,6 +100,6 @@ div.leftbar {
 div.rightbar {
     float:right;
     width:450px;
-    margin-left: 50px;
+    margin-left: 20px;
     text-align: left ;
 }
